--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,12 @@ buildscript {
         gradle_android_plugin_version ='3.0.0'
         min_sdk_version = 19
         sdk_version =  26
+        gradle_version = "2.3.3"
+        junit_version = "4.12"
+        espresso_version = "3.0.1"
+        android_test_support_version = "0.5"
+        constraint_layout_version = "1.0.2"
+
     }
     repositories {
         google()
